--- a/images/00-base/Dockerfile
+++ b/images/00-base/Dockerfile
@@ -53,6 +53,7 @@ RUN apk --no-cache add \
     tar \
     tzdata \
     util-linux \
+    wireguard-tools \
     vim \
     xz \
  && mv -vf /etc/conf.d/qemu-guest-agent /etc/conf.d/qemu-guest-agent.orig \
