etcd 3.4.7 binaries added

--- a/images/20-progs/Dockerfile
+++ b/images/20-progs/Dockerfile
@@ -26,3 +26,10 @@ COPY --from=k3os /output/ /output/
 WORKDIR /output
 RUN git clone --branch v0.7.0 https://github.com/ahmetb/kubectx.git \
  && chmod -v +x kubectx/kubectx kubectx/kubens
+# ETCD
+ENV ETCD_VER v3.4.7
+ENV ETCD_DOWNLOAD_URL https://github.com/etcd-io/etcd/releases/download
+RUN apk -U add curl
+RUN curl -L ${ETCD_DOWNLOAD_URL}/${ETCD_VER}/etcd-${ETCD_VER}-linux-amd64.tar.gz -o ${ETCD_VER}-linux-amd64.tar.gz
+RUN mkdir etcd && tar xzvf ${ETCD_VER}-linux-amd64.tar.gz --strip-components=1 -C etcd
+RUN rm -f ${ETCD_VER}-linux-amd64.tar.gz
