--- a/images/20-rootfs/Dockerfile
+++ b/images/20-rootfs/Dockerfile
@@ -82,6 +82,8 @@ RUN rm -rf \
 COPY --from=k3s /output/install.sh /usr/src/image/libexec/k3os/k3s-install.sh
 COPY --from=progs /output/metadata /usr/src/image/sbin/metadata
 COPY --from=progs /output/kubectx/kubectx /output/kubectx/kubens /usr/src/image/bin/
+COPY --from=progs /output/etcd/etcd /usr/src/image/sbin
+COPY --from=progs /output/etcd/etcdctl /usr/src/image/bin
 
 COPY overlay/ /usr/src/image/
 
